# manuscript-ocr

./: .gitignore  DETECTOR.md  LICENSE  MANIFEST.in  README.md  RECOGNIZERS.md  TODO_0.1.13_lazy_imports.txt  example_config_usage.py  example_full_pipeline.py  example_ocr_pipeline.py  example_trba_isolated.py  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.py  todo.md  v_0_1_11.txt  v_0_1_12.txt  v_0_1_13.txt
detector_scripts/: check_gpu_setup.py  example_create_json.py  example_create_json_craft.py  example_create_json_grid.py  example_train.py
docs/: BENCHMARK.md  DOCS_BUILD.md  PIPELINE_API.md  RECOGNIZERS.md
example/: app_corrector.py  corrector_app.py  create_collages.py  datector.py  end_to_end_app.py  export_corrector.py  gradio_app.py  pipeline_with_corrector.py  run_tune.py  test_pipeline_init.py  tune_app.py  tune_config_example.json
notebooks/: README.md  manuscript-ocr-license-plates.ipynb  Приме_запуска_обучения_распознавания.ipynb  Пример_запуска_pipeline_с_trocr.ipynb  Пример_запуска_pipeline_с_yandex_speller.ipynb  Пример_запуска_pipeline_с_yolo.ipynb  Пример_запуска_демо.ipynb  Пример_запуска_обучения_детектора.ipynb  Пример_запуска_обучения_корректора.ipynb  Пример_инференса_endtoend (1).ipynb  Пример_инференса_endtoend.ipynb  Пример_инференса_детектора.ipynb  Пример_обучения_детектора.ipynb  Пример_обучения_детектора_новый.ipynb  Пример_расчета_времени_инференса.ipynb  Пример_расчета_времени_инференса_детектора.ipynb
scripts/: README.md  east_infer_speed_test.py  export_east_to_onnx.py  prepare_school_notebooks.py  test_east_onnx_inference.py
src/: calc_metrics.py  db_to_json.py  east_infer.py  example copy 2.py  example copy.py  example.py  example2.py  example3 copy.py  example3.py  example3_optuna copy.py  example3_optuna.py  (+15 more)
(+418 files in other folders)
