[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "manuscript-ocr"
version = "0.1.7"
description = "EAST-based OCR detector API (CPU/GPU versions)"
readme = "README.md"
license = {text = "MIT"}
authors = [{email = "sherstpasha99@gmail.com"}]
keywords = ["ocr", "text-detection", "east", "computer-vision", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.11.0,<2.8.0",
    "torchvision>=0.12.0,<0.23.0", 
    "torchaudio>=0.11.0,<2.8.0",
    "numpy>=1.21.0,<2.3.0",
    "opencv-python>=4.5.0,<5.0.0",
    "Pillow>=9.0.0",
    "shapely>=1.8.0,<3.0.0",
    "numba>=0.56.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "gdown>=4.4.0,<6.0.0",
    "scikit-image>=0.19.0,<1.0.0",
    "torch-optimizer>=0.1.0,<1.0.0",
]

[project.optional-dependencies]
gpu = [
    "tensorboard>=2.8.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/konstantinkozhin/manuscript-ocr"
Repository = "https://github.com/konstantinkozhin/manuscript-ocr.git"
Issues = "https://github.com/konstantinkozhin/manuscript-ocr/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]